MDEV-6102 Comparison between TIME and DATETIME does not use CURRENT_DATE MDEV-6101 Hybrid functions do not add CURRENT_DATE when converting TIME to DATETIME